--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,5 @@
     <input type="number" step="1.0" [(ngModel)]="rectSize.height" />
   </p>
 </div>
-<app-rect />
+<app-rect  [(size)]="rectSize"/>    
+<!-- //size is our custom 2 way binding property -->
